# levermoney

./: .env.example  .gitignore  API_DOCUMENTATION.md  CHANGELOG.md  CLAUDE.md  Dockerfile  FLUXO-DETALHADO.md  ONBOARDING-V2-PLANO.md  PLANO.md  PLANO_FUNDACAO.md  REFERENCIA-APIs-ML-MP.md  ca_categories.json  docker-compose.yml  pyproject.toml  requirements.txt
.specify/: feature.json
api nova/: .env.example  .gitignore  conciliacoes.txt  novoplano.txt  requirements.txt
app/: config.py  main.py
dashboard/: DEPLOY.md  Dockerfile  PLANO_META_DIARIA_DINAMICA.md  README.md  REFATORACAO_METAS_E_PWA.md  claude.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
diagramas/: 01_visao_geral.mmd  02_backfill.mmd  03_sync_diario.mmd  04_processador.mmd  05_fila_ca.mmd  06_baixas.mmd  07_classificador_avulso.mmd  08_pipeline_noturno.mmd  09_ciclo_vida_venda.mmd
docs/: API_DOCUMENTATION.md  AUDITORIA_JAN2026_141AIR.md  BACKGROUND_TASKS.md  CODE_MAP.md  DIAGRAMA_FLUXO_COMPLETO_API.md  DIVERGENCIAS_CONHECIMENTO.md  FLUXO_DETALHADO.md  GAP_ANALYSIS_JAN2026.md  GAP_ANALYSIS_V2_CAJOBS.md  IDS_IMPORTANTES.md  METODOLOGIA_DIVERGENCIAS.md  REGRAS_NEGOCIO.md  ROTAS.md  TABELAS.md  TESTES.md
migrations/: 001_initial.sql  002_unified_platform.sql  004_onboarding_v2.sql  005_expense_batches_gdrive_snapshot.sql  006_fee_adjusted_amount.sql  006_payment_events.sql  007_extrato_uploads.sql  008_unified_ledger.sql  009_deprecate_mp_expenses.sql  010_extrato_missing.sql
rebuild-v3/: 00-SUCESSO-E-TESTES.md  01-objetivo-e-veredito.md  02-arquitetura-alvo.md  03-forense-e-bugs.md  04-harness.md  05-fases-progresso.md  06-reconciliacao-contabil.md  07-dados-resultados.md  08-decisoes-proximos-passos.md  09-convergencia.md  README.md
rfcs/: PROMPT-RFC-002.md  RFC-001-unified-event-ledger.md  RFC-002-unified-event-ledger-v2.md
scripts/: backfill_release_report.py  bootstrap_easyutilidades_jan.py  bootstrap_netair_feb.py  cleanup_feb_stale.py  (+25 more)
(+423 files in other folders)
